implementing auth to project
